--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,11 +2,19 @@
 
 {% block body %}
 
-<h2>Dice Rolls </h2>
+<h2>Dice Rolls</h2>
 
-{% for character in all_characters %}
-    <h3>{{character.name}}</h3>
-    {{all_rolls.query.filter_by(character_id=character.id)}}
+{% for char in all_characters %}
+    <h3><b>Level</b> {{char.level}} {{char.name}} </h3>
+
+    {% for roll in all_rolls %}
+
+        {% if roll.character_id == char.id %} 
+        
+        Dice rolled: d{{roll.dice_num}} result = {{roll.dice_result}} 
+        <br>
+        {%endif%}
+    {%endfor%}
     <br>
 {%endfor%}
 
