--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -7,7 +7,8 @@
         <h1>DnD Dice Checker - {{ title }} </h1>
         <h2>
         <a href="{{ url_for('home') }}">Home</a>
-        
+        <a href="{{ url_for('addchar') }}">Add Character</a>
+        <a href="{{ url_for('adddice') }}">Add a Roll</a>
         </h2>
 
         {% block body %}
